<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/background"
                android:orientation="vertical"
        >
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/navbar"
            android:id="@+id/navibar">
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/login_ivLogin"
                android:background="@drawable/login_btdone_invisible"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="5dp"
                android:contentDescription="@string/description"
                />

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/login_ivBack"
                android:background="@drawable/login_btback"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:contentDescription="@string/description"
                />
    </RelativeLayout>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="wrap_content"
                    android:layout_height="92dp"
                    android:background="@drawable/login_frame"
                    android:layout_margin="10dp"
            >
        <EditText
            android:id="@+id/login_etMail"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint"
            android:singleLine="true"
            android:layout_marginTop="12dp"
            android:layout_marginLeft="60dp"
            android:background="@null"
                />
        <EditText
            android:id="@+id/login_etPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            android:singleLine="true"
            android:layout_alignLeft="@id/login_etMail"
            android:layout_marginTop="56dp"
            android:background="@null"
            android:password="true"
                />
    </RelativeLayout>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/note"
            android:id="@+id/login_tvForgotPass"
            android:gravity="center"
            android:textColor="#b1b1b1"
            android:layout_gravity="center"
                    />
</LinearLayout>