<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/drawer_layout">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/navbar"
                android:layout_gravity="left|center_vertical">
            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/myfavorite_btn_option"
                    android:id="@+id/btMenu"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="8dp" android:layout_marginTop="3dp" android:layout_marginBottom="3dp"
                    android:layout_centerVertical="true"/>
            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/home_buttonnotification"
                    android:id="@+id/btNotification"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_alignTop="@+id/btMenu" android:layout_marginRight="5dp"
                    android:layout_marginTop="3dp" android:layout_marginBottom="3dp"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tvHome"
                    android:textStyle="bold"
                    android:id="@+id/tvHome" android:layout_centerHorizontal="true"
                    android:layout_alignBottom="@+id/btMenu" android:singleLine="false"
                    android:textColor="@android:color/white" android:textSize="@dimen/tvHome"/>
        </RelativeLayout>
        <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/tvContentFeed"
                android:textStyle="bold"
                android:textSize="14dp"
                android:background="@android:color/background_dark"
                android:id="@+id/tvContentFeed" android:layout_gravity="left|center_vertical" android:typeface="sans"/>
        <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
            <ListView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    android:id="@+id/lvFeeds" android:layout_alignParentLeft="true" android:layout_alignParentTop="true"
                    android:layout_alignParentBottom="true"/>
            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:background="@drawable/home_buttonrecorder4"
                    android:id="@+id/button"
                    android:layout_centerHorizontal="true"
                    android:layout_alignBottom="@+id/lvFeeds"
                    />
        </RelativeLayout>
    </LinearLayout>
    <!--navigation drawer-->

    <RelativeLayout
            android:layout_width="@dimen/sidebar_width"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center"
            android:dividerHeight="0dp"
            android:divider="@android:color/background_dark"
            android:id="@+id/left_drawer">
        <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:background="@drawable/sidebar_image_button_search"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true" android:id="@+id/relativeLayout">
            <EditText
                    android:layout_width="180dp"
                    android:layout_height="24dp"
                    android:id="@+id/etSearch"
                    android:hint="search"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:background="@null"
                    android:layout_marginLeft="45dp"/>
        </RelativeLayout>

        <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_alignLeft="@+id/relativeLayout"
                android:background="@android:color/white"
                android:layout_below="@+id/relativeLayout" android:id="@+id/rlMyStation">
            <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/content_icon_comment"
                    android:id="@+id/imageView" android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true" android:layout_marginLeft="8dp"
                    android:layout_marginTop="2dp" android:layout_marginBottom="2dp" android:layout_marginRight="5dp"/>
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="130dp"
                    android:layout_height="fill_parent" android:layout_toRightOf="@+id/imageView"
                    android:layout_alignBottom="@+id/imageView" android:id="@+id/linearLayout"
                    >
                <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tvMyStation"
                        android:textStyle="bold"
                        android:textColor="@color/sidebar_colortext_mystation"
                        android:id="@+id/tvMyStation" android:layout_gravity="left|center_vertical"
                        android:layout_marginLeft="5dp" android:textSize="14dp" android:layout_marginTop="5dp"/>
                <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tvMyStationComposer"
                        android:id="@+id/tvMyStationComposer"
                        android:textColor="@color/sidebar_colortext_mystationcomposer"
                        android:layout_gravity="left|center_vertical"
                        android:layout_marginLeft="5dp" android:textSize="10dp"/>
            </LinearLayout>
            <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="20dp"
                    android:layout_toRightOf="@+id/linearLayout"
                    android:layout_alignTop="@+id/imageView"
                    android:layout_margin="5dp">
                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/ivMyStation"
                        android:background="@drawable/sidebar_image_mystation"
                        android:layout_alignParentLeft="true" android:layout_centerInParent="true"/>
                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/ivArrows"
                        android:layout_alignParentRight="true"
                        android:background="@drawable/arrows"
                        android:layout_alignTop="@+id/ivMyStation"
                        android:adjustViewBounds="false" android:layout_centerInParent="true"
                        android:layout_marginTop="2dp"/>
            </RelativeLayout>
        </RelativeLayout>
        <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="24dp"
                android:layout_below="@+id/rlMyStation"
                android:background="@drawable/toolbar"
                android:id="@+id/rlMenu">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Menu"
                    android:id="@+id/textView"
                    android:textColor="@android:color/white"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_centerInParent="true"
                    android:textStyle="bold" android:layout_marginLeft="10dp" android:textSize="16dp"
                    />
        </RelativeLayout>
        <ListView
                android:id="@+id/lvSlideBar"
                android:layout_width="180dp"
                android:layout_height="match_parent"
                android:choiceMode="singleChoice"
                android:background="@android:color/white"
                android:layout_below="@id/rlMenu"
                android:layout_alignRight="@id/rlMenu"
                android:scrollbars="vertical"
                android:layout_alignLeft="@id/rlMenu"/>
    </RelativeLayout>
</android.support.v4.widget.DrawerLayout>
